--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="containerSub">
       <div class="dataPerson">
-        <img class="image" src="./assets/images/avatar-jessica.jpeg" alt="Avatar">
+        <img class="image" src="./avatar-jessica.jpeg" alt="Avatar">
         <span class="Name">Jessica Randall</span>
         <span class="Direction">London, United Kingdom</span>
         <span class="Estudios">"Front-end developer and avid reader."</span>
